set sidebar default back to open and add a css-line to fix z-index

--- a/project/src/sidebar/components_sidebar/Questionnaire.css
+++ b/project/src/sidebar/components_sidebar/Questionnaire.css
@@ -12,6 +12,10 @@ input{
 .form-floating > label{
     z-index: 1;
 }
+
+.btn-group > .btn-check:checked:not(:hover) {
+    z-index: 0;
+}
 .fa-rectangle-xmark{
     padding: 1px 10px;
     color: white;
